Fixed a small bug with the navigation on mobile

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -115,7 +115,7 @@
         color:white;
        
         margin-right:auto;
-        flex-shrink: 0;
+        flex-wrap: wrap;
     }
 
     &-nav {
